welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (!estSurBiscuit()) { recule() }
prendBiscuit();
while (!estFaceBiscuit()) { avance() }
poseBiscuit();
recule();

